package com.example.romantests


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import androidx.test.runner.AndroidJUnit4
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class FirstActivityTest2 {

    @Rule
    @JvmField
    var mActivityTestRule = ActivityTestRule(FirstActivity::class.java)

    @Test
    fun firstActivityTest2() {
        val appCompatEditText = onView(
allOf(withId(R.id.password_text),
childAtPosition(
childAtPosition(
withId(android.R.id.content),
0),
0),
isDisplayed()))
        appCompatEditText.perform(replaceText("test1@A"), closeSoftKeyboard())
        
        val materialButton = onView(
allOf(withId(R.id.check_button), withText("CHECK"),
childAtPosition(
childAtPosition(
withId(android.R.id.content),
0),
1),
isDisplayed()))
        materialButton.perform(click())
        
        val appCompatEditText2 = onView(
allOf(withId(R.id.text_1),
childAtPosition(
childAtPosition(
withId(android.R.id.content),
0),
0),
isDisplayed()))
        appCompatEditText2.perform(replaceText("�"), closeSoftKeyboard())
        
        val appCompatEditText3 = onView(
allOf(withId(R.id.text_2),
childAtPosition(
childAtPosition(
withId(android.R.id.content),
0),
1),
isDisplayed()))
        appCompatEditText3.perform(replaceText("�"), closeSoftKeyboard())
        
        val appCompatEditText4 = onView(
allOf(withId(R.id.text_3),
childAtPosition(
childAtPosition(
withId(android.R.id.content),
0),
2),
isDisplayed()))
        appCompatEditText4.perform(replaceText("�"), closeSoftKeyboard())
        
        pressBack()
        
        val materialButton2 = onView(
allOf(withId(R.id.check_button_2), withText("CHECK"),
childAtPosition(
childAtPosition(
withId(android.R.id.content),
0),
3),
isDisplayed()))
        materialButton2.perform(click())
        
        val button = onView(
allOf(withId(R.id.check_button_2), withText("CHECK"),
withParent(withParent(withId(android.R.id.content))),
isDisplayed()))
        button.check(matches(isDisplayed()))
        }
    
    private fun childAtPosition(
            parentMatcher: Matcher<View>, position: Int): Matcher<View> {

        return object : TypeSafeMatcher<View>() {
            override fun describeTo(description: Description) {
                description.appendText("Child at position $position in parent ")
                parentMatcher.describeTo(description)
            }

            public override fun matchesSafely(view: View): Boolean {
                val parent = view.parent
                return parent is ViewGroup && parentMatcher.matches(parent)
                        && view == parent.getChildAt(position)
            }
        }
    }
    }
